library/PakInterfaceDelegates.h

#pragma once

typedef unsigned char (*PAKMEMREAD8)(unsigned short);
typedef void (*PAKMEMWRITE8)(unsigned char, unsigned short);

typedef unsigned char (*PAKPORTREAD)(unsigned char);
typedef void (*PAKPORTWRITE)(unsigned char, unsigned char);

typedef unsigned short (*MODULEAUDIOSAMPLE)(void);

typedef void (*ASSERTINTERRUPT) (unsigned char, unsigned char);
typedef void (*CONFIGMODULE)(unsigned char);
typedef void (*DMAMEMPOINTERS) (PAKMEMREAD8, PAKMEMWRITE8);
typedef void (*DYNAMICMENUCALLBACK)(char*, int, int);
typedef void (*GETMODULENAME)(char*, char*, DYNAMICMENUCALLBACK);
typedef void (*HEARTBEAT) (void);
typedef void (*MODULERESET)(void);
typedef void (*MODULESTATUS)(char*);
typedef void (*SETCART)(unsigned char);
typedef void (*PAKSETCART)(SETCART);
typedef void (*SETINIPATH)(char*);
typedef void (*SETINTERRUPTCALLPOINTER) (ASSERTINTERRUPT);

typedef struct {
  unsigned char (*PakMemRead8)(unsigned short);
  void (*PakMemWrite8)(unsigned char, unsigned short);

  unsigned char (*PakPortRead)(unsigned char);
  void (*PakPortWrite)(unsigned char, unsigned char);

  unsigned short (*ModuleAudioSample)(void);

  void (*ConfigModule)(unsigned char);
  void (*DmaMemPointers) (PAKMEMREAD8, PAKMEMWRITE8);
  void (*GetModuleName)(char*, char*, DYNAMICMENUCALLBACK);
  void (*HeartBeat)(void);
  void (*ModuleReset) (void);
  void (*ModuleStatus)(char*);
  void (*PakSetCart)(SETCART);
  void (*SetIniPath) (char*);
  void (*SetInterruptCallPointer) (ASSERTINTERRUPT);
} PakInterfaceDelegates;